Realign page formatting and fix css

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  text-align: center;
   background-color: black;
 }
 
@@ -83,55 +82,4 @@
 /* dropdown menu on hover */
 .dropdown:hover .dropdown-content {
   display: block;
-}
-
-/* SLIDESHOW IMAGE GOES HERE */
-
-.image {
-  width: 70vw;
-  height: 500px;
-  object-fit: cover;
-  border-radius: 2px;
-  user-select: none;
-}
-
-.right-arrow {
-  font-size: 1.5rem;
-  z-index: 10;
-  cursor: pointer;
-  user-select: none;
-}
-
-.left-arrow {
-  font-size: 1.5rem;
-  color: black;
-  z-index: 10;
-}
-
-.container {
-  position: relative;
-  text-align: center;
-  color: white;
-}
-
-.slideshow-text {
-  display: none;
-}
-
-.container:has(:hover) .slideshow-text {
-  display: inline;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 4rem;
-}
-
-.container:has(:hover) .image {
-  filter: brightness(50%);
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -o-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
 }
