--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -3,7 +3,6 @@ h1,
 h2,
 .time-stamp {
   color: rgb(253, 255, 125);
-  text-align: left;
 }
 
 .time-stamp {
