--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -24,3 +24,10 @@
   padding-top: 20px;
   padding-bottom: 20px;
 }
+
+.bio-text {
+  text-align: center;
+  max-width: 65%;
+  align-content: center;
+  margin: 0 auto;
+}
